# algorithm-optimization

./: .gitattributes  README.md  pyproject.toml
fibonacci/: CMakeLists.txt  __init__.py  fibonacci.py
fibonacci/src/: fibonacci.c  fibonacci.h  gmp.c  linear.c  matmul_2var.c  matmul_3var.c  matmul_fastexp.c  matmul_naive.c
matmul/: CMakeLists.txt  __init__.py  matmul.py
matmul/src/: cblas.c  naive.c
primes/: CMakeLists.txt  __init__.py  primes.py
primes/src/: sieve_basic.c  sieve_p2.c  trial_division_known_divisors.c
sorting/: CMakeLists.txt  __init__.py  sorting.py
sorting/src/: bubble_sort_naive.cpp  bubble_sort_optimized.cpp  insertion_sort.cpp  selection_sort.cpp
